v0.6/guides/core-concepts/logging.mdx
---
title: "Logging"
description: "Write structured, color-coded logs with the Bejibun logger."
icon: "scroll"
---

Bejibun ships `@bejibun/logger`, a lightweight, color-coded logger used throughout the framework and available to
your application code. It provides a fluent `Logger` facade with level methods for common cases and a builder for
adding context or error traces.

## Basic logging

Import the `Logger` facade and call a level method:

```ts
import Logger from "@bejibun/logger";

Logger.debug("This is a DEBUG message.");
Logger.info("This is an INFO message.");
Logger.warn("This is a WARN message.");
Logger.error("This is an ERROR message.");
```

Each line is timestamped and labelled with its level:

```text
2025-10-16 16:00:00.000 [DEBUG]: This is a DEBUG message.
2025-10-16 16:00:00.000 [INFO]: This is an INFO message.
2025-10-16 16:00:00.000 [WARN]: This is a WARN message.
2025-10-16 16:00:00.000 [ERROR]: This is an ERROR message.
```

Levels are color-coded on a terminal that supports ANSI output.

## Log levels

| Method                  | Use for                                |
| ----------------------- | -------------------------------------- |
| `Logger.debug(message)` | Verbose diagnostics during development |
| `Logger.info(message)`  | Normal, expected events                |
| `Logger.warn(message)`  | Unexpected but recoverable situations  |
| `Logger.error(message)` | Failures and exceptions                |

## Adding context

Use `setContext()` to replace the level label with a custom tag, which is useful for identifying the subsystem that
produced a log:

```ts
Logger.setContext("Payment").info("Charge succeeded.");
// 2025-10-16 16:00:00.000 [Payment]: Charge succeeded.
```

`setContext()` returns a builder, so the level method must follow it. The framework uses the same mechanism
internally (`[Router]`, `[WebSocket]`, `[APP]`, and others).

## Logging an error trace

`trace()` is a builder method that writes an error (or string) to stderr. Chain it after a level method to log the
message and the error together, which is the standard idiom for caught exceptions:

```ts
try {
    await riskyOperation();
} catch (error) {
    Logger.setContext("Worker").error("Job failed").trace(error);
}
```

`trace()` writes to stderr and returns `void`, so it must be the last call in the chain.

## Formatting helpers

| Method               | Effect                                         |
| -------------------- | ---------------------------------------------- |
| `Logger.empty()`     | Prints a blank line                            |
| `Logger.separator()` | Prints a dashed line across the terminal width |

Both methods return `void`, so they cannot be chained:

```ts
Logger.info("Starting migration");
Logger.separator();
```

<Tip>
    `@bejibun/logger` is a standalone package, so you can use it in scripts and other Bun projects,
    not just inside a Bejibun app.
</Tip>

## Next steps

See [error handling](/v0.6/guides/core-concepts/error-handling) for how framework exceptions are reported.
